<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="dam_A32078.pokedex_part1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="dam_A32078.pokedex_part1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="dam_A32078.pokedex_part1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_regions"
        android:name="dam_A32078.pokedex_part1.ui.region.RegionFragment"
        android:label="@string/menu_regions"
        tools:layout="@layout/fragment_region" >
        <action
            android:id="@+id/action_nav_regions_to_pokemonsFragment"
            app:destination="@id/pokemonsFragment" />
    </fragment>

    <fragment
        android:id="@+id/pokemonsFragment"
        android:name="dam_A32078.pokedex_part1.ui.pokemon.PokemonsFragment"
        android:label="@string/pokemons"
        tools:layout="@layout/fragment_pokemons"
        />

</navigation>